src/negative_test_cases/Testcases/incorrect_operand_type_unary.stl
void main(){

char a ;
int  b ;

boolean c = NOT a;


}     
